// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
.c0 {
  position: relative;
  background-color: #5C37CC;
  border: none;
  border-radius: 4px;
  color: #FFF;
  font-size: 10px;
  height: 40px;
  line-height: 40px;
  font-weight: bold;
  padding: 0 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <button
    className="c0"
    data-testid="button-default-undefined"
    size="SMALL"
    type="button"
  >
    text
  </button>
</div>
`;

exports[`Storyshots Components/Button Rounded 1`] = `
.c1 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: bold;
  color: #98989E;
  text-align: left;
  line-height: 12px;
}

.c0 {
  border: none;
  background: rgb(44,44,46);
  height: 50px;
  border-radius: 30px;
  height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0 > * + * {
  margin-left: 10px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <button
    className="c0"
    data-testid="button-iconRounded-undefined"
    size="default"
    type="button"
  >
    <span
      className="c1"
      color="dark"
      fontSize="12px"
      fontStyle="normal"
      role=""
    >
      text
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Cards/Base Base 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0"
    color="gray"
  >
    ...
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Body Body 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

.c1 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0"
    color="gray"
  >
    <div
      className="c1"
    >
      body
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Config Config 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c7 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
}

.c0 > * + * {
  margin-top: 10px;
}

.c5 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #5C37CC;
}

.c6 > :not(:first-child) {
  margin-top: 10px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <i
          className="c4"
          color="light"
          data-testid="icon-workspace"
          size="15px"
        >
          
        </i>
      </div>
    </div>
    <div
      className="c5 c6"
    >
      <span
        className="c7"
        color="light"
        fontSize="14px"
        fontStyle="normal"
        role=""
      />
      ...
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Expand Expand 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c7 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
}

.c0 > * + * {
  margin-top: 10px;
}

.c5 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c8 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
  cursor: pointer;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #5C37CC;
}

.c6 > :not(:first-child) {
  margin-top: 10px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <i
          className="c4"
          color="light"
          data-testid="icon-undefined"
          size="15px"
        >
          
        </i>
      </div>
    </div>
    <div
      className="c5 c6"
    >
      <span
        className="c7"
        color="light"
        fontSize="14px"
        fontStyle="normal"
        role=""
      />
      <div
        className="c8"
        onClick={[Function]}
      >
        click here
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Header Header 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

.c1 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > * + * {
  margin-left: 10px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0"
    color="gray"
  >
    <div
      className="c1"
    >
      header
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Main Main 1`] = `
.c3 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: dark;
}

.c0 > * + * {
  margin-top: 10px;
}

.c2 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c5 {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-top: 10px;
}

.c5:only-child {
  margin-top: 0;
}

.c6 {
  margin-top: 10px;
}

.c1 {
  background-color: rgb(44,44,46);
}

.c1:hover .sc-fnVZcZ,
.c1:hover .c4 {
  white-space: normal;
  overflow: auto;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0 c1"
    color="dark"
    data-testid="card-main"
  >
    <div
      className="c2"
    >
      <span
        className="c3 c4 c5"
        color="light"
        fontSize="12px"
        fontStyle="normal"
        role=""
      />
      <div
        className="c6"
      >
        ...
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Release Release 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c6 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 10px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: center;
  line-height: 10px;
}

.c9 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0 > * + * {
  margin-top: 10px;
}

.c7 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border: 1px solid #F2F2F9;
  color: #F2F2F9;
  border-radius: 20px;
  padding: 0px 10px;
  box-sizing: border-box;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: lowercase;
}

.c5 *:first-letter {
  text-transform: uppercase;
}

.c1 {
  background-color: #10AA80;
}

.c1:hover .{
  white-space: normal;
  overflow: visible;
}

.c8 .{
  width: 235px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0 c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <i
          className="c4"
          color="light"
          data-testid="icon-info"
          size="15px"
        >
          
        </i>
      </div>
      <div
        className="c5"
      >
        <span
          className="c6"
          color="light"
          data-testid="badge-Deployed"
          fontSize="10px"
          fontStyle="normal"
          role=""
        >
          Deployed
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
    >
      <span
        className="c9 "
        color="light"
        data-testid="release-card-description"
        fontSize="14px"
        fontStyle="normal"
        role=""
      >
        ...
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tab Panel Tab Panel 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c1 {
  height: 41px;
  background-color: rgb(44,44,46);
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 660px;
  box-sizing: border-box;
  border-right: 1px solid rgb(44,44,46);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 10px;
  padding-right: 32px;
  padding-left: 32px;
  overflow: auto;
  height: calc(100vh - 90px);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > * + * {
  margin-left: 8px;
}

.c6 {
  width: 150px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c2 {
  color: #F2F2F9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 233px;
  height: 41px;
  box-sizing: border-box;
  padding-left: 31px;
  background-color: #3A3A3C;
}

.c2 > * + * {
  margin-left: auto;
  margin-right: 12px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="c0"
    data-testid="tabpanel-Untitled"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <i
            className="c4"
            color="light"
            data-testid="icon-undefined"
          >
            
          </i>
          <span
            className="c5 c6"
            color="light"
            fontSize="12px"
            fontStyle="normal"
            role=""
          >
            Untitled
          </span>
        </div>
      </div>
    </div>
    <div
      className="c7 tabpanel-content"
    >
      Tab
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Text Text 1`] = `
.c0 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-weight: normal;
  color: #0A84FF;
  text-align: left;
}

<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <span
    className="c0"
    color="primary"
    fontStyle="normal"
    role=""
  >
    Text
  </span>
</div>
`;
